# asb-box

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  west.yml
cmake/: ApplySourceList.cmake
src/: CMakeLists.txt  main.c
src/drivers/: CMakeLists.txt  reg_74hc595.h
src/leds/: CMakeLists.txt  anim_lib.h  anim_player.c  anim_player.h
src/logic/: CMakeLists.txt  buttons.c  buttons.h  logic.c  logic.h
src/net/: CMakeLists.txt  ap.c  ap.h  coap_server.c
src/nvs/: CMakeLists.txt  nvs_manager.c  nvs_manager.h
src/peripheral/: reg_74hc595.c
